# imandra-http-api-client

./: .gitignore  .ocamlformat  Makefile  README.md  diff.patch  dune-project  imandra-http-api-client.opam  imandra_http_api_client.opam  imandra_http_api_client.swagger.yaml  shell.nix
.github/: main.yml
.github/workflows/: main.yml
.openapi-generator/: FILES
src/: api.ml  api.mli  dune  imandra_http_api_client.ml  imandra_http_api_client.mli  imandra_http_api_client_eio.ml  main.ml  main.mli  main_eio.ml
src/apis/: default_api.ml  default_api.mli
src/models/: eval_request_src.ml  eval_response.ml  hints.ml  induct_functional_body.ml  induct_structural_body.ml  instance_request_name.ml  instance_request_src.ml  instance_response.ml  method_body.ml  method_ext_solver_body.ml  method_induct_body.ml  method_induct_body_body.ml  method_unroll_body.ml  model_method.ml  printer_details.ml  response_error.ml  response_instance.ml  response_model.ml  up_to_body.ml  verify_response.ml  verify_response_body.ml  with_instance_body.ml  with_unknown_reason_body.ml
src/support/: enums.ml  jsonSupport.ml  request.ml
test/: api_test.ml  dune  test_http_api_local.ml
tests/: decompose.ml  decompose_eio.ml  dune  evaluation.ml  evaluation_eio.ml  instance.ml  instance_eio.ml  test_main.ml  test_main_eio.ml  test_run.ml  verification.ml  verification_eio.ml
